updating to sequential mode

--- a/.codefresh/codefresh-cd.yml
+++ b/.codefresh/codefresh-cd.yml
@@ -1,169 +1,122 @@
 version: '1.0'
-mode: parallel
 stages:
   - build
   - "security scans"
+  - reporting
   - "pull request"
   - staging
   - production
 steps:
-  BuildResultImage:
-    title: Building Result Image
-    type: build
+  BuildingMicroServices:
+    type: parallel
     stage: build
-    image_name: example-voting-app/result
-    working_directory: ./result/
-    dockerfile: Dockerfile
-    tag: '${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}'
-    on_success:
-      metadata:
-        set:
-          - '${{BuildResultImage.imageId}}':
-            - CF_QUALITY: true
-            - Performance: true
-            - Latency: ".89" 
-            - Test_Coverage: "83%"
-            - JIRA: "https://codefresh-io.atlassian.net/browse/MKTG-12"
-    when:
-      steps:
-        - name: main_clone
-          on:
-            - success
-  BuildVoteImage:
-    title: Building Vote Image
-    type: build
-    stage: build
-    image_name: example-voting-app/vote
-    working_directory: ./vote/
-    dockerfile: Dockerfile
-    tag: '${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}'
-    on_success:
-      metadata:
-        set:
-          - '${{BuildVoteImage.imageId}}':
-            - CF_QUALITY: true
-            - Performance: true
-            - Latency: ".77" 
-            - Test_Coverage: "90%"
-            - JIRA: "https://codefresh-io.atlassian.net/browse/MKTG-12"
-    when:
-      steps:
-        - name: main_clone
-          on:
-            - success
-  BuildWorkerImage:
-    title: Building Worker Image
-    type: build
-    stage: build
-    image_name: example-voting-app/worker
-    working_directory: ./worker/
-    dockerfile: Dockerfile
-    tag: '${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}'
-    on_success:
-      metadata:
-        set:
-          - '${{BuildWorkerImage.imageId}}':
-            - CF_QUALITY: true
-            - Performance: true
-            - Latency: ".46" 
-            - Test_Coverage: "68%"
-            - JIRA: "https://codefresh-io.atlassian.net/browse/MKTG-12"
-    when:
-      steps:
-        - name: main_clone
-          on:
-            - success
-  BuildTestImage:
-    title: Building Test Image
-    type: build
-    stage: build
-    image_name: example-voting-app/tests
-    working_directory: ./tests/
-    dockerfile: Dockerfile
-    tag: '${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}'
-    when:
-      steps:
-        - name: main_clone
-          on:
-            - success
-  ScanResultImage:
-    image: codefresh/cfstep-paclair:3.0.0
+    steps:
+      BuildResultImage:
+        title: Building Result Image
+        type: build
+        image_name: example-voting-app/result
+        working_directory: ./result/
+        dockerfile: Dockerfile
+        tag: '${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}'
+        on_success:
+          metadata:
+            set:
+              - '${{BuildResultImage.imageId}}':
+                - CF_QUALITY: true
+                - Performance: true
+                - Latency: ".89" 
+                - Test_Coverage: "83%"
+                - JIRA: "https://codefresh-io.atlassian.net/browse/MKTG-12"
+      BuildVoteImage:
+        title: Building Vote Image
+        type: build
+        image_name: example-voting-app/vote
+        working_directory: ./vote/
+        dockerfile: Dockerfile
+        tag: '${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}'
+        on_success:
+          metadata:
+            set:
+              - '${{BuildVoteImage.imageId}}':
+                - CF_QUALITY: true
+                - Performance: true
+                - Latency: ".77" 
+                - Test_Coverage: "90%"
+                - JIRA: "https://codefresh-io.atlassian.net/browse/MKTG-12"
+      BuildWorkerImage:
+        title: Building Worker Image
+        type: build
+        image_name: example-voting-app/worker
+        working_directory: ./worker/
+        dockerfile: Dockerfile
+        tag: '${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}'
+        on_success:
+          metadata:
+            set:
+              - '${{BuildWorkerImage.imageId}}':
+                - CF_QUALITY: true
+                - Performance: true
+                - Latency: ".46" 
+                - Test_Coverage: "68%"
+                - JIRA: "https://codefresh-io.atlassian.net/browse/MKTG-12"
+      BuildTestImage:
+        title: Building Test Image
+        type: build
+        image_name: example-voting-app/tests
+        working_directory: ./tests/
+        dockerfile: Dockerfile
+        tag: '${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}'
+    fail_fast: true
+  ScanningDockerImages:
+    type: parallel
     stage: "security scans"
-    environment:
-      - IMAGE=example-voting-app/result
-      - TAG=${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}
-    when:
-      steps:
-        - name: BuildResultImage
-          on:
-            - success 
-  ScanVoteImage:
-    image: codefresh/cfstep-paclair:3.0.0
-    stage: "security scans"
-    environment:
-      - IMAGE=example-voting-app/vote
-      - TAG=${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}
-    when:
-      steps:
-       - name: BuildVoteImage
-         on:
-           - success 
-  ScanWorkerImage:
-    image: codefresh/cfstep-paclair:3.0.0
-    stage: "security scans"
-    environment:
-      - IMAGE=example-voting-app/worker
-      - TAG=${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}
-    when:
-      steps:
-       - name: BuildWorkerImage
-         on:
-           - success 
-  ArchiveResultClairReport:
-    image: mesosphere/aws-cli
-    stage: "security scans"
-    commands:
-      - aws s3 cp ./reports/clair-scan-example-voting-app-result-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html s3://${{S3_BUCKETNAME}}/${{CF_BUILD_ID}}/clair-scan-example-voting-app-result-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html --acl public-read
-    on_success:
-      metadata:
-        set:
-          - ${{BuildResultImage.imageId}}:
-            - CLAIR_REPORT: "https://s3.amazonaws.com/${{S3_BUCKETNAME}}/${{CF_BUILD_ID}}/clair-scan-example-voting-app-result-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html"
-    when:
-      steps:
-        - name: ScanResultImage
-          on:
-            - success 
-  ArchiveVoteClairReport:
-    image: mesosphere/aws-cli
-    stage: "security scans"
-    commands:
-      - aws s3 cp ./reports/clair-scan-example-voting-app-vote-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html s3://${{S3_BUCKETNAME}}/${{CF_BUILD_ID}}/clair-scan-example-voting-app-vote-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html --acl public-read
-    on_success:
-      metadata:
-        set:
-          - ${{BuildVoteImage.imageId}}:
-            - CLAIR_REPORT: "https://s3.amazonaws.com/${{S3_BUCKETNAME}}/${{CF_BUILD_ID}}/clair-scan-example-voting-app-vote-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html"
-    when:
-      steps:
-        - name: ScanVoteImage
-          on:
-            - success 
-  ArchiveWorkerClairReport:
-    image: mesosphere/aws-cli
-    stage: "security scans"
-    commands:
-      - aws s3 cp ./reports/clair-scan-example-voting-app-worker-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html s3://${{S3_BUCKETNAME}}/${{CF_BUILD_ID}}/clair-scan-example-voting-app-worker-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html --acl public-read
-    on_success:
-      metadata:
-        set:
-          - ${{BuildWorkerImage.imageId}}:
-            - CLAIR_REPORT: "https://s3.amazonaws.com/${{S3_BUCKETNAME}}/${{CF_BUILD_ID}}/clair-scan-example-voting-app-worker-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html"
-    when:
-      steps:
-        - name: ScanWorkerImage
-          on:
-            - success 
+    steps:
+      ScanResultImage:
+        image: codefresh/cfstep-paclair:3.0.0
+        environment:
+          - IMAGE=example-voting-app/result
+          - TAG=${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}
+      ScanVoteImage:
+        image: codefresh/cfstep-paclair:3.0.0
+        environment:
+          - IMAGE=example-voting-app/vote
+          - TAG=${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}
+      ScanWorkerImage:
+        image: codefresh/cfstep-paclair:3.0.0
+        environment:
+          - IMAGE=example-voting-app/worker
+          - TAG=${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}
+  ArchiveClairReports:
+    type: parallel
+    stage: reporting
+    steps:
+      ArchiveResultClairReport:
+        image: mesosphere/aws-cli
+        commands:
+          - aws s3 cp ./reports/clair-scan-example-voting-app-result-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html s3://${{S3_BUCKETNAME}}/${{CF_BUILD_ID}}/clair-scan-example-voting-app-result-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html --acl public-read
+        on_success:
+          metadata:
+            set:
+              - ${{BuildResultImage.imageId}}:
+                - CLAIR_REPORT: "https://s3.amazonaws.com/${{S3_BUCKETNAME}}/${{CF_BUILD_ID}}/clair-scan-example-voting-app-result-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html"
+      ArchiveVoteClairReport:
+        image: mesosphere/aws-cli
+        commands:
+          - aws s3 cp ./reports/clair-scan-example-voting-app-vote-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html s3://${{S3_BUCKETNAME}}/${{CF_BUILD_ID}}/clair-scan-example-voting-app-vote-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html --acl public-read
+        on_success:
+          metadata:
+            set:
+              - ${{BuildVoteImage.imageId}}:
+                - CLAIR_REPORT: "https://s3.amazonaws.com/${{S3_BUCKETNAME}}/${{CF_BUILD_ID}}/clair-scan-example-voting-app-vote-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html"
+      ArchiveWorkerClairReport:
+        image: mesosphere/aws-cli
+        commands:
+          - aws s3 cp ./reports/clair-scan-example-voting-app-worker-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html s3://${{S3_BUCKETNAME}}/${{CF_BUILD_ID}}/clair-scan-example-voting-app-worker-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html --acl public-read
+        on_success:
+          metadata:
+            set:
+              - ${{BuildWorkerImage.imageId}}:
+                - CLAIR_REPORT: "https://s3.amazonaws.com/${{S3_BUCKETNAME}}/${{CF_BUILD_ID}}/clair-scan-example-voting-app-worker-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html"
   NotifyGitHubPREnvCreating:
     title: Set Pull Request Environment pending
     image: cloudposse/github-status-updater
@@ -183,16 +136,6 @@ steps:
           isPRopen: "'${{CF_PULL_REQUEST_ACTION}}' == 'opened'"
           isPRsynchronized: "'${{CF_PULL_REQUEST_ACTION}}' == 'synchronize'"
           isPRreopen: "'${{CF_PULL_REQUEST_ACTION}}' == 'reopened'"
-      steps:
-        - name: ArchiveResultClairReport
-          on:
-            - success
-        - name: ArchiveVoteClairReport
-          on:
-            - success
-        - name: ArchiveWorkerClairReport
-          on:
-            - success
   DeployPRRelease:
     stage: "pull request"
     title: Create Ephemeral Helm Release for Pull Request
@@ -214,20 +157,22 @@ steps:
       - value_worker_image_tag=${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}
       - value_worker_image_pullSecret=codefresh-generated-r.cfcr.io-cfcr-dustinvb-pull-requests  
     when:
-      steps:
-        - name: NotifyGitHubPREnvCreating
-          on:
-            - success
+      condition:
+        any:
+          isPRopen: "'${{CF_PULL_REQUEST_ACTION}}' == 'opened'"
+          isPRsynchronized: "'${{CF_PULL_REQUEST_ACTION}}' == 'synchronize'"
+          isPRreopen: "'${{CF_PULL_REQUEST_ACTION}}' == 'reopened'"
   RunPRDVTs:
     stage: "pull request"
     image: 'codefresh/cli:latest'
     commands:
       - codefresh run dustinvanbuskirk/example-voting-app/dvts -b='${{CF_BRANCH}}' -s='${{CF_REVISION}}' -v KUBE_CONTEXT=sales-demo@FirstKubernetes -v NAMESPACE=dustinvb-pull-requests -v SERVICES='vote result' -v RELEASE_NAME='${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_PULL_REQUEST_NUMBER}}-${{CF_REPO_NAME}}' -v TEST_IMAGE='example-voting-app/tests:${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}'
     when:
-      steps:
-        - name: DeployPRRelease
-          on:
-            - success 
+      condition:
+        any:
+          isPRopen: "'${{CF_PULL_REQUEST_ACTION}}' == 'opened'"
+          isPRsynchronized: "'${{CF_PULL_REQUEST_ACTION}}' == 'synchronize'"
+          isPRreopen: "'${{CF_PULL_REQUEST_ACTION}}' == 'reopened'"
   NotifyGitHubPREnvCreated:
     title: Set Pull Request Environment URL
     image: cloudposse/github-status-updater
@@ -242,10 +187,11 @@ steps:
       - GITHUB_DESCRIPTION=Created Pull Request Environment
       - GITHUB_TARGET_URL=https://g.codefresh.io/helm/releases/sales-demo@FirstKubernetes/kube-system/${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_PULL_REQUEST_NUMBER}}-${{CF_REPO_NAME}}/services
     when:
-      steps:
-        - name: RunPRDVTs
-          on:
-            - success 
+      condition:
+        any:
+          isPRopen: "'${{CF_PULL_REQUEST_ACTION}}' == 'opened'"
+          isPRsynchronized: "'${{CF_PULL_REQUEST_ACTION}}' == 'synchronize'"
+          isPRreopen: "'${{CF_PULL_REQUEST_ACTION}}' == 'reopened'"
   NotifySlackChannelPR:
     title: Sending Slack Notification for Pull Request Environment
     image: cloudposse/slack-notifier
@@ -268,10 +214,11 @@ steps:
       - SLACK_FIELD2_VALUE=${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}
       - SLACK_FIELD2_SHORT=true
     when:
-      steps:
-        - name: RunPRDVTs
-          on:
-            - success 
+      condition:
+        any:
+          isPRopen: "'${{CF_PULL_REQUEST_ACTION}}' == 'opened'"
+          isPRsynchronized: "'${{CF_PULL_REQUEST_ACTION}}' == 'synchronize'"
+          isPRreopen: "'${{CF_PULL_REQUEST_ACTION}}' == 'reopened'"
   PushChartToHelmRepository:
     stage: staging
     title: Push Helm Chart to Repository
@@ -281,23 +228,10 @@ steps:
       - CHART_REF=example-voting-app
       - CHART_VERSION=${{CF_RELEASE_TAG}}
     when:
-      steps:
-        - name: ArchiveResultClairReport
-          on:
-            - success
-        - name: ArchiveVoteClairReport
-          on:
-            - success
-        - name: ArchiveWorkerClairReport
-          on:
-            - success
       condition:
         any:
           stageRelease: "'${{CF_PRERELEASE_FLAG}}' == 'true'"
           prodRelease: "'${{CF_PRERELEASE_FLAG}}' == 'false'"
-      branch:
-        only:
-          - master
   UpgradeStagingRelease:
     stage: staging
     title: Upgrading Staging Release
@@ -324,10 +258,6 @@ steps:
         any:
           stageRelease: "'${{CF_PRERELEASE_FLAG}}' == 'true'"
           prodRelease: "'${{CF_PRERELEASE_FLAG}}' == 'false'"
-      steps:
-        - name: PushChartToHelmRepository
-          on:
-            - success 
   RunStagingDVTs:
     stage: staging
     title: Running DVTS on Staging Release
@@ -335,10 +265,10 @@ steps:
     commands:
       - codefresh run dustinvanbuskirk/example-voting-app/dvts -b='${{CF_BRANCH}}' -s='${{CF_REVISION}}' -v KUBE_CONTEXT=sales-demo@FirstKubernetes -v NAMESPACE=dustinvb-staging -v SERVICES='vote result' -v RELEASE_NAME='example-voting-app' -v TEST_IMAGE='example-voting-app/tests:master-${{CF_SHORT_REVISION}}'
     when:
-      steps:
-        - name: UpgradeStagingRelease
-          on:
-            - success 
+      condition:
+        any:
+          stageRelease: "'${{CF_PRERELEASE_FLAG}}' == 'true'"
+          prodRelease: "'${{CF_PRERELEASE_FLAG}}' == 'false'"
   NotifySlackChannelStaging:
     title: Sending Slack Notification for Staging Upgrade
     image: cloudposse/slack-notifier
@@ -363,10 +293,10 @@ steps:
       - "SLACK_FIELD3_TITLE=:github: GitHub Release"
       - SLACK_FIELD3_VALUE=https://github.com/${{CF_REPO_OWNER}}/${{CF_REPO_NAME}}/releases/tag/${{CF_RELEASE_TAG}}
     when:
-      steps:
-        - name: RunStagingDVTs
-          on:
-            - success 
+      condition:
+        any:
+          stageRelease: "'${{CF_PRERELEASE_FLAG}}' == 'true'"
+          prodRelease: "'${{CF_PRERELEASE_FLAG}}' == 'false'"
   UpgradeProductionRelease:
     stage: production
     title: Upgrading Production Release
@@ -392,10 +322,7 @@ steps:
       condition:
         all:
           prodRelease: "'${{CF_PRERELEASE_FLAG}}' == 'false'"
-      steps:
-        - name: RunStagingDVTs
-          on:
-            - success 
+          #masterBranch: "'${{CF_BASE_BRANCH}}' == 'master'"
   RunProductionDVTs:
     stage: production
     title: Running DVTS on Production Release
@@ -403,10 +330,10 @@ steps:
     commands:
       - codefresh run dustinvanbuskirk/example-voting-app/dvts -b='${{CF_BRANCH}}' -s='${{CF_REVISION}}' -v KUBE_CONTEXT=sales-prod@FirstKubernetes -v NAMESPACE=dustinvb-production -v SERVICES='vote result' -v RELEASE_NAME='example-voting-app' -v TEST_IMAGE='example-voting-app/tests:master-${{CF_SHORT_REVISION}}'
     when:
-      steps:
-        - name: UpgradeProductionRelease
-          on:
-            - success 
+      condition:
+        all:
+          prodRelease: "'${{CF_PRERELEASE_FLAG}}' == 'false'"
+          #masterBranch: "'${{CF_BASE_BRANCH}}' == 'master'" 
   NotifySlackChannelProduction:
     title: Sending Slack Notification for Production Upgrade
     image: cloudposse/slack-notifier
@@ -431,7 +358,7 @@ steps:
       - "SLACK_FIELD3_TITLE=:github: GitHub Release"
       - SLACK_FIELD3_VALUE=https://github.com/${{CF_REPO_OWNER}}/${{CF_REPO_NAME}}/releases/tag/${{CF_RELEASE_TAG}}
     when:
-      steps:
-        - name: RunProductionDVTs
-          on:
-            - success 
+      condition:
+        all:
+          prodRelease: "'${{CF_PRERELEASE_FLAG}}' == 'false'"
+          #masterBranch: "'${{CF_BASE_BRANCH}}' == 'master'" 
