--- a/vote/codefresh.yml
+++ b/vote/codefresh.yml
@@ -22,11 +22,7 @@ steps:
       - IMAGE=example-voting-app/vote
       - TAG=${{CF_BRANCH_TAG_NORMALIZED}}
   ArchiveReport:
-    image: mesosphere/aws-cli
-    commands:
-      - aws s3 cp ./reports/clair-scan-example-voting-app-vote-${{CF_BRANCH_TAG_NORMALIZED}}.html s3://${{S3_BUCKETNAME}}/${{CF_BUILD_ID}}/clair-scan-example-voting-app-vote-${{CF_BRANCH_TAG_NORMALIZED}}.html --acl public-read
-    on_success:
-     metadata:
-        set:
-          - ${{BuildingDockerImage.imageId}}:
-              - CLAIR_REPORT: "https://s3.amazonaws.com/${{S3_BUCKETNAME}}/${{CF_BUILD_ID}}/clair-scan-example-voting-app-vote-${{CF_BRANCH_TAG_NORMALIZED}}.html"
+    title: Upload Clair Report
+    image: codefresh/cf-docker-test-reporting
+    environment:
+      - REPORT_INDEX_FILE=clair-scan-example-voting-app-vote-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html
