--- a/worker/codefresh.yml
+++ b/worker/codefresh.yml
@@ -24,5 +24,6 @@ steps:
   ArchiveReport:
     title: Upload Clair Report
     image: codefresh/cf-docker-test-reporting
+    working_directory: ./reports
     environment:
-      - REPORT_INDEX_FILE=./reports/clair-scan-example-voting-app-worker-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html
+      - REPORT_INDEX_FILE=clair-scan-example-voting-app-worker-${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}.html
